<resources>
    <!-- Global -->
    <string name="app_name">Семейный бюджет</string>
    <string name="ruble">руб.</string>
    <string name="zero">0</string>
    <string name="percent">%</string>

    <!-- Content Descriptions -->
    <string name="logo">Лого</string>

    <!-- Actions -->
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="have_account">У меня уже есть аккаунт</string>
    <string name="sign_out">Выйти</string>

    <!-- Fields -->
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="name">Название</string>
    <string name="sum">Сумма</string>

    <!-- Screens -->
    <string name="title_profile">Профиль</string>
    <string name="title_goals">Цели</string>
    <string name="title_search">Поиск</string>
    <string name="title_transactions">Транзакции</string>

    <!-- Titles -->
    <string name="balance">Баланс</string>
    <string name="incomes_sources">Источники доходов</string>
    <string name="spendings_sources">Источники расходов</string>
    <string name="current_goals">Действующие цели</string>
    <string name="completed_goals">Завершенные цели</string>
    <string name="income_percentage">Процент от дохода:</string>
    <string name="month_day">День месяца</string>
    <string name="incomes">Доходы</string>
    <string name="spendings">Расходы</string>
    <string name="invitations">Приглашения</string>
    <string name="incomes_source">Источник доходов</string>
    <string name="spendings_source">Источник расходов</string>
    <string name="goal">Цель</string>
    <string name="income_percentile">Процент от дохода</string>
    <string name="actual_sum">Собранная сумма</string>
    <string name="necessary_sum">Необходимая сумма</string>
    <string name="income">Доход</string>
    <string name="spending">Расход</string>
    <string name="income_add">Добавить доход</string>
    <string name="spending_add">Добавить расход</string>
</resources>