<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_transactions"
    app:startDestination="@id/incomesFragment">
    <fragment
        android:id="@+id/incomesFragment"
        android:name="rustam.urazov.budgetoffamily.screen.incomes.IncomesScreen"
        android:label="@string/incomes"
        tools:layout="@layout/fragment_incomes">
        <action
            android:id="@+id/action_incomesFragment_to_incomeAddFragment"
            app:destination="@id/incomeAddFragment"
            app:popUpTo="@navigation/nav_graph_transactions"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/spendingsFragment"
        android:name="rustam.urazov.budgetoffamily.screen.spendings.SpendingsScreen"
        android:label="@string/spendings"
        tools:layout="@layout/fragment_spendings">
        <action
            android:id="@+id/action_spendingsFragment_to_spendingAddFragment"
            app:destination="@id/spendingAddFragment"
            app:popUpTo="@navigation/nav_graph_transactions"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/incomeAddFragment"
        android:name="rustam.urazov.budgetoffamily.screen.incomeAdd.IncomeAddScreen"
        android:label="@string/income"
        tools:layout="@layout/fragment_income_add">
        <action
            android:id="@+id/action_incomeAddFragment_to_incomesFragment"
            app:destination="@id/incomesFragment"
            app:popUpTo="@navigation/nav_graph_transactions"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/spendingAddFragment"
        android:name="rustam.urazov.budgetoffamily.screen.spendingAdd.SpendingAddScreen"
        android:label="@string/spending"
        tools:layout="@layout/fragment_spending_add">
        <action
            android:id="@+id/action_spendingAddFragment_to_spendingsFragment"
            app:destination="@id/spendingsFragment"
            app:popUpTo="@navigation/nav_graph_transactions"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>