<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.signin.SignInScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_baseline_attach_money_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/app_name"
            android:textColor="@color/dark"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/dark"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintVertical_bias="1" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:autofillHints="password"
            android:backgroundTint="@color/dark"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/bSignIn" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/button_corners_12dp"
            android:text="@string/signIn"
            android:textColor="@color/light"
            android:textSize="21sp"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toTopOf="@id/bSignUp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corners_12dp"
            android:text="@string/registration"
            android:textColor="@color/light"
            android:textSize="21sp"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>