<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.signup.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_baseline_attach_money_24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="name"
            android:backgroundTint="@color/dark"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/etLastName"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:layout_constraintVertical_bias="1" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints="name"
            android:backgroundTint="@color/dark"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintTop_toBottomOf="@id/etFirstName"
            app:layout_constraintVertical_bias="1" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/dark"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etLastName"
            app:layout_constraintVertical_bias="1" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:autofillHints="password"
            android:backgroundTint="@color/dark"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/etPasswordAgain"
            app:layout_constraintTop_toBottomOf="@id/etEmail"
            app:layout_constraintVertical_bias="1" />

        <EditText
            android:id="@+id/etPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:autofillHints="password"
            android:backgroundTint="@color/dark"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:textColor="@color/dark"
            app:layout_constraintBottom_toTopOf="@id/bSignIn" />

        <Button
            android:id="@+id/bSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:background="@drawable/button_corners_12dp"
            android:text="@string/signUp"
            android:textColor="@color/light"
            android:textSize="21sp"
            app:backgroundTint="@color/yellow"
            app:layout_constraintBottom_toTopOf="@id/bSignUp" />

        <Button
            android:id="@+id/bSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_corners_12dp"
            android:text="@string/have_account"
            android:textColor="@color/light"
            android:textSize="21sp"
            app:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>